# fates-proxy-usecase

./: .gitignore  Makefile  README.md  pipeline.py  pyproject.toml
.github/workflows/: release.yml
config/: config.yaml  data_config.yaml  model_config.yaml
data/split/: X_test.csv  p_test.csv  p_train.csv  y_test.csv  y_train.csv
justification/: composition.jd  deployable.json  fairness.json  pred_perf.jd  pred_perf.json
justification/jd/: deployable.jd  fairness.jd
justification/py/: deployable.py
model/: model.pkl
scripts/: clean_and_prepare_data.py  clean_data.py  model_training.py  prepare_data.py  split_data.py
src/: utils.py
src/data/: data_cleaning.py  data_preparation.py  split.py
src/metrics/: fairness.py  predictive_perf.py  utils.py
src/model/: training.py
src/models/: training.py  utils.py
