[project]
name = "fates-proxy-usecase"
version = "0.1.0"
description = ""
authors = [
    {name = "Tristan Gouaichault",email = "tristangchlt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
